# fast-graph

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: rust-ci.yml
benches/: dfs.rs  linked_list.rs
benches/graphlib/: bench_graphlib.rs  main.rs
src/: categories.rs  doublylinkedlist.rs  edge.rs  interface.rs  lib.rs  linked_list.rs  node.rs  slotmap_graph.rs  specta_derives.rs  tests.rs  writer.rs
src/algorithms/: bfs.rs  dfs.rs  mod.rs
src/linked_list/: linked_list.rs  linked_slotmap.rs  mod.rs
tests/: test_basics.rs  test_categories.rs  test_dfs.rs
