[package]
name = "fast-graph"
description = "A fast, lightweight and extensible implementation of a graph data structure."
documentation = "https://docs.rs/fast-graph"
readme = "README.md"
homepage = "https://github.com/henke443/fast-graph"
repository = "https://github.com/henke443/fast-graph"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
categories = ["data-structures", "database", "mathematics", "science::geo", "visualization"]
keywords = ["graph", "ecs", "slotmap", "category", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wrapper_derive = { version = "0.1.0", path = "../wrapper_derive" }
slotmap = { version = "1.0" }
thiserror = "1.0.58"
specta = { version = "=2.0.0-rc.7", optional = true }
tauri-specta = { version = "=2.0.0-rc.4", features = ["javascript", "typescript"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = {version = "1.0", optional = true}
hashbrown = {version = "0.14.3", optional = true, features=["inline-more", "ahash"]}

[features]
default = ["hashbrown", "categories"]
serde = ["dep:serde", "dep:serde_json", "slotmap/serde"]
specta = ["dep:specta", "dep:tauri-specta"]
hashbrown = ["dep:hashbrown", "hashbrown/serde"]
categories = []
std = []



